# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  17 May 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure /dev is mounted with exec since many video drivers need to 
    mmap() device nodes in there with exec access #92921 by Lachlan Pease.

  16 May 2005; Mike Frysinger <vapier@gentoo.org>:

    If halt/reboot failed, try to force it as a fallback.

    Add RC_FORCE_AUTO setting so people can try to minimize amount of 
    user interaction required for booting.

    Move nsswitch.conf to glibc.

  15 May 2005; Roy Marples <uberlord@gentoo.org>:

    udhcpc and dhclient now select the best interface when one goes down

  14 May 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure /dev is mounted with sane permissions #87745 by Jordan.

    When we search /etc/fstab for /, make sure we handle mounts that have 
    UUID/LABEL info in them #90603 by Alessandro Sappia.

    Simplify rc-script error checking so we don't need a tempfile and so
    non-root users can run /etc/init.d/status #85892 by Stuart Shelton.

    Add a sanity check for devs who write bad scripts and call exit #85298.

    Run irqbalance after /var is rw #85304 by Miroslaw Mieszczak.

    Redo the addon code to prepare for profiling support #74425.

  12 May 2005; Mike Frysinger <vapier@gentoo.org>:

    Move pam files out of baselayout and into packages #92387.

  10 May 2005; Martin Schlemmer <azarah@gentoo.org>:

    Really fix trace_dependencies() to handle net.* services properly.

    Quiet down valid_i() if ${svcdir}/softlevel do not yet exist.

  10 May 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix get_service_index() being off by one.  Fix trace_dependencies() to also
    take "net" into regard if its a net_service.  This fixes two problems, first
    shutdown should bring services down that uses net before the net.* services,