@@ -86,18 +86,17 @@ start() {
 	# Make sure depmod from modutils do not whine, but do not bother if
 	# we are on a 2.6 kernel without modprobe.old
 	if [[ -z "${CDBOOT}" ]] && [[ $(get_KV) -lt $(KV_to_int '2.5.48') || \
-	     -x /sbin/modprobe.old ]]; then
+	     -x /sbin/modprobe.old ]] && [[ ! -e /etc/modules.conf ]] ; then
 		echo '### This file is automatically generated by modules-update' \
-			> /etc/modules.conf &>/dev/null
+			> /etc/modules.conf 2>/dev/null
 		[[ ! -f /etc/modules.conf ]] && \
 			ewarn "Cannot update /etc/modules.conf!"
 	fi
+	
 	# Only do this if we have modules.conf or a 2.6 kernel
 	if [[ -z "${CDBOOT}" ]] && [[ -f /etc/modules.conf || \
 	      $(get_KV) -ge $(KV_to_int '2.5.48') ]]; then
-		ebegin "Calculating module dependencies"
-		/sbin/modules-update &>/dev/null
-		eend $? "Failed to calculate module dependencies"
+		/sbin/modules-update 
 	fi
 
 	if [[ -f /etc/modules.autoload && ! -L /etc/modules.autoload ]]; then
