@@ -41,7 +41,7 @@ while [[ -n $1 ]] ; do
 		--assume-kernel=*)
 			ASSUME_KV=${1#*=} ;;
 		*)
-			echo "Error: I don't understand $1" >&2
+			eerror "Error: I don't understand $1"
 			exit 1 ;;
 	esac
 	shift
@@ -84,41 +84,17 @@ for x in ${CFGFILES} ; do
 			! type -p modprobe.old > /dev/null && \
 				 continue
 			
-			echo "Error: the current ${x} is not automatically generated."
+			ewarn "Error: the current ${x} is not automatically generated."
 
 			if $FORCE ; then
-				echo "force specified, (re)generating file anyway."
+				ewarn "force specified, (re)generating file anyway."
 			else
-				echo "Use \"modules-update force\" to force (re)generation."
+				eerror "Use \"modules-update force\" to force (re)generation."
 				exit 1
 			fi
 		fi
 	fi
 done
-
-[[ -e ${CFGFILE} ]] && cp -f "${CFGFILE}" "${CFGFILE}".old
-if ${KERNEL_2_6} ; then
-	[[ -e ${CFGFILE2} ]] && cp -f "${CFGFILE2}" "${CFGFILE2}".old
-	[[ -e ${CFGFILE4} ]] && cp -f "${CFGFILE4}" "${CFGFILE4}".old
-fi
-
-
-FULLHEADER="${HEADER}
-#
-# Please do not edit this file directly. If you want to change or add
-# anything please take a look at the files in ${MODDIR} and read
-# the manpage for modules-update(8).
-#"
-echo "${FULLHEADER}" > "${TMPFILE}"
-if [[ -x /sbin/generate-modprobe.conf ]] && ${KERNEL_2_6} ; then
-	sed -e "s:the files in ${MODDIR}:${CFGFILE}:" \
-		"${TMPFILE}" > "${TMPFILE2}"
-
-	if [[ -f ${CFGFILE3} ]] ; then
-		sed -e "s:the files in ${MODDIR}:${CFGFILE3}:" \
-			"${TMPFILE}" > "${TMPFILE4}"
-	fi
-fi
 
 generate_config() {
 	local cfg=
@@ -135,7 +111,7 @@ generate_config() {
 		# Skip backup and RCS files; fixes bug 20597 (07 May 2004 agriffis)
 		[[ ${cfg} == *~ || ${cfg} == *.bak || ${cfg} == *,v ]] && continue
 
-		[[ ${do_mprobe} -eq 1 && -e "/etc/modprobe.d/${x##*/}" ]] && continue
+		[[ ${do_mprobe} -eq 1 && -e "/etc/modprobe.d/${cfg##*/}" ]] && continue
 
 		echo "### modules-update: start processing ${cfg}" >> "${tmpfile}"
 
@@ -154,84 +130,112 @@ generate_config() {
 	return 0
 }
 
-if [[ -f ${CFGFILE} ]] || ! ${KERNEL_2_6} ; then
-	generate_config "${CONF}" "${MODDIR}" "${TMPFILE}" 0
+if ${FORCE} || [[ ${MODDIR} -nt ${CFGFILE} || ! -e ${CFGFILE} ]] ; then
+	ebegin "Updating ${CFGFILE}"
+	FULLHEADER="${HEADER}
+	#
+	# Please do not edit this file directly. If you want to change or add
+	# anything please take a look at the files in ${MODDIR} and read
+	# the manpage for modules-update(8).
+	#"
+	echo "${FULLHEADER}" > "${TMPFILE}"
+	if [[ -x /sbin/generate-modprobe.conf ]] && ${KERNEL_2_6} ; then
+		sed -e "s:the files in ${MODDIR}:${CFGFILE}:" \
+		"${TMPFILE}" > "${TMPFILE2}"
 
+		if [[ -f ${CFGFILE3} ]] ; then
+			sed -e "s:the files in ${MODDIR}:${CFGFILE3}:" \
+			"${TMPFILE}" > "${TMPFILE4}"
+		fi
+	fi
+
+	generate_config "${CONF}" "${MODDIR}" "${TMPFILE}" 0
+	[[ -e ${CFGFILE} ]] && mv -f "${CFGFILE}" "${CFGFILE}.old"
 	mv -f "${TMPFILE}" "${CFGFILE}"
-else
-	rm -f "${TMPFILE}"
+	eend 0
 fi
 
-if [[ -x /sbin/generate-modprobe.conf ]] && ${KERNEL_2_6} ; then
-	# Make sure that generate-modprobe.conf can handle --assume-kernel
-	# if we were called with it.
-	if [[ -n ${ASSUME_KV} ]] && \
-	   ! grep -qe -- --assume-kernel /sbin/generate-modprobe.conf
-	then
-		eerror "Error: modules-update called with --assume-kernel flag, but"
-		eerror "generate-modprobe.conf doesn't understand it.  You need to"
-		eerror "install >=module-init-tools-3.0-r2"
-		exit 3
-	fi
-	if /sbin/generate-modprobe.conf ${ASSUME_KV:+--assume-kernel=${KV}} \
-		>> "${TMPFILE2}" 2> /dev/null
-	then
-		mv -f "${TMPFILE2}" "${CFGFILE2}"
-	else
-
-		#
-		# If we made it here, it means either generate-modprobe.conf 
-		# bombed on us, or the user doesn't have modutils installed.
-		# If the latter is true, then we should generate modprobe.conf 
-		# ourselves with any old files laying around in /etc/modules.d.
-		#
-		rm -f "${TMPFILE2}"
-		if type -p modprobe.old > /dev/null ; then
-			ewarn "Warning: could not generate ${CFGFILE2}!"
-		else
-			rm -f "${CFGFILE}"
-			echo "${FULLHEADER/modules.d/modprobe.d}" > "${TMPFILE2B}"
-			generate_config "${CONF}" "${MODDIR}" "${TMPFILE2}" 1
-			export TESTING_MODPROBE_CONF="${TMPFILE2}"
-			if /sbin/generate-modprobe.conf ${ASSUME_KV:+--assume-kernel=${KV}} \
-				 >> "${TMPFILE2B}" 2> /dev/null
-			then
-				mv -f "${TMPFILE2B}" "${CFGFILE2}"
-			else
-				ewarn "Warning: could not generate ${CFGFILE2}!"
-				rm -f "${TMPFILE2B}"
-			fi
-			rm -f "${TMPFILE2}"
+if [[ ${CFGFILE} -nt ${CFGFILE2} || ! -e ${CFGFILE2} ]]; then
+	if [[ -x /sbin/generate-modprobe.conf ]] && ${KERNEL_2_6} ; then
+		# Make sure that generate-modprobe.conf can handle --assume-kernel
+		# if we were called with it.
+		if [[ -n ${ASSUME_KV} ]] && \
+			! grep -qe -- --assume-kernel /sbin/generate-modprobe.conf
+		then
+			eerror "Error: modules-update called with --assume-kernel flag, but"
+			eerror "generate-modprobe.conf doesn't understand it.  You need to"
+			eerror "install >=module-init-tools-3.0-r2"
+			exit 3
 		fi
-	fi
+		
+		ebegin "Updating ${CFGFILE2}"
+		if /sbin/generate-modprobe.conf ${ASSUME_KV:+--assume-kernel=${KV}} \
+			>> "${TMPFILE2}" 2>/dev/null
+		then
+			[[ -e ${CFGFILE2} ]] && mv -f "${CFGFILE2}" "${CFGFILE2}.old"
+			mv -f "${TMPFILE2}" "${CFGFILE2}"
+			eend 0
+		else
+			#
+			# If we made it here, it means either generate-modprobe.conf 
+			# bombed on us, or the user doesn't have modutils installed.
+			# If the latter is true, then we should generate modprobe.conf 
+			# ourselves with any old files laying around in /etc/modules.d.
+			#
+			rm -f "${TMPFILE2}"
+			if type -p modprobe.old > /dev/null ; then
+				eend 1 "Warning: could not generate ${CFGFILE2}!"
+			else
+				echo "${FULLHEADER/modules.d/modprobe.d}" > "${TMPFILE2B}"
+				generate_config "${CONF}" "${MODDIR}" "${TMPFILE2}" 1
+				export TESTING_MODPROBE_CONF="${TMPFILE2}"
+				if /sbin/generate-modprobe.conf ${ASSUME_KV:+--assume-kernel=${KV}} \
+					>> "${TMPFILE2B}" 2> /dev/null
+				then
+					[[ -e ${CFGFILE2} ]] && mv -f "${CFGFILE2}" "${CFGFILE2}.old"
+					mv -f "${TMPFILE2B}" "${CFGFILE2}"
+					eend 0
+				else
+					eend 1 "Warning: could not generate ${CFGFILE2}!"
+					rm -f "${TMPFILE2B}"
+				fi
+				rm -f "${TMPFILE2}"
+			fi
+		fi
 
-	if [[ -f ${CFGFILE3} ]] ; then
-		gawk '$0 !~ /^[[:space:]]*include/ { print $0 }' "${CFGFILE3}" \
+		if [[ -f ${CFGFILE3} ]] ; then
+			ebegin "Updating ${CFGFILE4}"
+			gawk '$0 !~ /^[[:space:]]*include/ { print $0 }' "${CFGFILE3}" \
 			> "${TMPFILE3}"
 
-		export TESTING_MODPROBE_CONF="${TMPFILE3}"
-		if /sbin/generate-modprobe.conf ${ASSUME_KV:+--assume-kernel=${KV}} \
-			>> "${TMPFILE4}" 2> /dev/null
-		then
-			mv -f "${TMPFILE4}" "${CFGFILE4}"
+			export TESTING_MODPROBE_CONF="${TMPFILE3}"
+			if /sbin/generate-modprobe.conf ${ASSUME_KV:+--assume-kernel=${KV}} \
+				>> "${TMPFILE4}" 2> /dev/null
+			then
+				[[ -e ${CFGFILE4} ]] && mv -f "${CFGFILE4}" "${CFGFILE4}.old"
+				mv -f "${TMPFILE4}" "${CFGFILE4}"
 
-			echo >> "${CFGFILE4}"
-			echo "include /etc/modprobe.conf" >> "${CFGFILE4}"
-		else
-			ewarn "Warning: could not generate ${CFGFILE4}!"
-			rm -f "${TMPFILE4}"
+				echo >> "${CFGFILE4}"
+				echo "include /etc/modprobe.conf" >> "${CFGFILE4}"
+				eend 0
+			else
+				eend 1 "Warning: could not generate ${CFGFILE4}!"
+				rm -f "${TMPFILE4}"
+			fi
+			rm -f "${TMPFILE3}"
 		fi
-		rm -f "${TMPFILE3}"
 	fi
 fi
 
 # We also call depmod here to stop insmod from complaining that modules.conf
 # is more recent then modules.dep
-if [[ -d $(depdir) && -f /proc/modules ]] ; then
-	if [[ -f /usr/src/linux/System.map ]] ; then
-		depmod -a -F /usr/src/linux/System.map ${KV}
-	else
-		depmod -a ${KV}
+if [[ ${CFGFILE2} -nt /lib/modules/${KV}/modules.dep ]] ; then
+	if [[ -d $(depdir) && -f /proc/modules ]] ; then
+		if [[ -f /usr/src/linux/System.map ]] ; then
+			depmod -a -F /usr/src/linux/System.map ${KV}
+		else
+			depmod -a ${KV}
+		fi
 	fi
 fi
 
